--- a/code/notebooks/experim_1d.ipynb
+++ b/code/notebooks/experim_1d.ipynb
@@ -51,21 +51,78 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:09<00:00, 37.12it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:12<00:00, 35.53it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:13<00:00, 34.78it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:13<00:00, 35.13it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:13<00:00, 34.85it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:13<00:00, 34.74it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:17<00:00, 33.29it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.76it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.73it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:17<00:00, 32.97it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:17<00:00, 33.28it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.44it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.58it/s]\n",
       "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.45it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:15<00:00, 33.93it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:15<00:00, 34.12it/s]\n",
-      " 90%|█████████████████████████████████████████████████████████████████████████████████▎        | 2643/2927 [01:18<00:16, 16.83it/s]"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.55it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.67it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.48it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.62it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.65it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.65it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.64it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.76it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.43it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:39<00:00, 29.52it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:41<00:00, 28.86it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:42<00:00, 28.69it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:40<00:00, 29.22it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:41<00:00, 28.89it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:52<00:00, 26.03it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:00<00:00, 24.30it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:58<00:00, 24.61it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:04<00:00, 23.55it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:58<00:00, 24.73it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:56<00:00, 25.06it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:57<00:00, 25.00it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:04<00:00, 23.49it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:00<00:00, 24.39it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:02<00:00, 23.89it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:01<00:00, 24.13it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:00<00:00, 24.20it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:04<00:00, 23.49it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:34<00:00, 26.54it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:26<00:00, 28.99it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:12<00:00, 34.28it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:14<00:00, 33.41it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:13<00:00, 34.15it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:13<00:00, 33.84it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:13<00:00, 34.05it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:11<00:00, 34.73it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:12<00:00, 34.42it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:12<00:00, 34.47it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:12<00:00, 34.52it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:12<00:00, 34.64it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:12<00:00, 34.21it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:13<00:00, 34.15it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:15<00:00, 33.16it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:15<00:00, 33.19it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:12<00:00, 34.30it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:14<00:00, 33.30it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:48<00:00, 27.98it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:53<00:00, 26.79it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:49<00:00, 27.70it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:49<00:00, 27.81it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:49<00:00, 27.86it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:49<00:00, 27.80it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:48<00:00, 28.09it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:51<00:00, 27.27it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:47<00:00, 28.22it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:48<00:00, 27.94it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:47<00:00, 28.24it/s]\n",
+      " 51%|█████████████████████████████████████████████▌                                            | 1538/3037 [00:28<00:52, 28.61it/s]"
      ]
     }
    ],
    "source": [
     "dir = '../results/'\n",
-    "file = 'experim_20.json'\n",
+    "file = 'experim_26.json'\n",
     "\n",
     "seeds = np.arange(4) + 101\n",
     "\n",
@@ -83,19 +140,16 @@
     "                upper_bound = 300,\n",
     "                alternating=True)\n",
     "\n",
-    "different_noises = [1]\n",
+    "different_noises = [0.1, 2, 5, 10, 20, 50]\n",
     "different_windows = [10]\n",
-    "different_wf = [\"default_d1\", \"default_d100\", \"const_d1\", \"const_d100\", \"diverge_05_d1\", \"diverge_05_d100\", \"simple_101_d1\", \"simple_101_d100\"]\n",
+    "different_wf = [\"simple_101\", \"const\", \"diverge_05\"]\n",
     "different_af = []\n",
     "\n",
     "\n",
     "interesting = set()\n",
     "\n",
     "for key_w in different_wf:\n",
-    "    interesting.add((key_w, \"start\", \"default\"))\n",
-    "\n",
-    "# for key_a in different_af:\n",
-    "#     interesting.add((\"simple_101\", \"start\", key_a))\n",
+    "    interesting.add((key_w, \"uniformal past\", \"default\"))\n",
     "\n",
     "\n",
     "experiments, df = run_experiments(dir+file, seeds, params, different_noises, different_windows, interesting)\n",
@@ -173,6 +227,14 @@
     "# print(df_r.to_latex(index=False, float_format=\"%.2f\"))\n",
     "# df[[\"noise_var\", \"train_window\", \"regret\"]].groupby([\"noise_var\", \"train_window\"]).mean()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adaeb720-fa58-45d3-93dc-a1a071b447b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
